results/SVCOMP/4-shot/log-Cookie-2024_03_18_14_13_16.txt
public class Cookie {

    private String name;
    private String value;

    //@ requires name != null && value != null;
    //@ ensures this.name == name && this.value == value;
    public Cookie(String name, String value) {
        this.name = name;
        this.value = value;
    }

    //@ ensures \result != null;
    public String getName() {
        return name;
    }

    //@ ensures \result != null;
    public String getValue() {
        return value;
    }
}
/home/max/Documents/JMLGPT/tmp/Cookie.java:7: error: An identifier with private visibility may not be used in a ensures clause with public visibility
    //@ ensures this.name == name && this.value == value;
                    ^
/home/max/Documents/JMLGPT/tmp/Cookie.java:7: error: An identifier with private visibility may not be used in a ensures clause with public visibility
    //@ ensures this.name == name && this.value == value;
                                         ^
2 errors

